--- a/roles/user-config/defaults/main.yml
+++ b/roles/user-config/defaults/main.yml
@@ -3,16 +3,16 @@
 # --------------------------
 # User configuration:
 
-display_name: Initial Setup
-username:     setup
-user_id:      1001
-group_id:     1001
+displayed_name: Initial Setup
+username:       setup
+user_id:        1001
+group_id:       1001
 
 subuid_start: 100000
-subuid_range: 65535
+subuid_range: 32768
 
 subgid_start: 100000
-subgid_range: 65535
+subgid_range: 32768
 
 groups_membership:
   - "{{ username }}"
