WIP: partitions config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -83,7 +83,7 @@ nocows=True
 ;ask_pass=False
 
 # (boolean) This controls whether an Ansible playbook should prompt for a vault password.
-ask_vault_pass=True
+#ask_vault_pass=True
 
 # (pathspec) Colon separated paths in which Ansible will search for Cache Plugins.
 ;cache_plugins={{ ANSIBLE_HOME ~ "/plugins/cache:/usr/share/ansible/plugins/cache" }}
@@ -235,7 +235,7 @@ inventory=hosts
 # (string) Set the main callback used to display Ansible output. You can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
 # See :ref:`callback_plugins` for a list of available options.
-stdout_callback=yaml
+callback_result_format=yaml
 
 # (string) Set the default strategy used for plays.
 ;strategy=linear
@@ -282,7 +282,7 @@ stdout_callback=yaml
 
 # (path) The vault password file to use. Equivalent to --vault-password-file or --vault-id
 # If executable, it will be run and the resulting stdout will be used as the password.
-#vault_password_file=vault/.password
+vault_password_file=vault/.password
 
 # (integer) Sets the default verbosity, equivalent to the number of ``-v`` passed in the command line.
 ;verbosity=0
@@ -332,7 +332,7 @@ display_skipped_hosts=False
 ;inject_facts_as_vars=True
 
 # (string) Path to the Python interpreter to be used for module execution on remote targets, or an automatic discovery mode. Supported discovery modes are ``auto`` (the default), ``auto_silent``, ``auto_legacy``, and ``auto_legacy_silent``. All discovery modes employ a lookup table to use the included system Python (on distributions known to include one), falling back to a fixed ordered list of well-known Python interpreter locations if a platform-specific default is not available. The fallback behavior will issue a warning that the interpreter should be set explicitly (since interpreters installed later may change which one is used). This warning behavior can be disabled by setting ``auto_silent`` or ``auto_legacy_silent``. The value of ``auto_legacy`` provides all the same behavior, but for backwards-compatibility with older Ansible releases that always defaulted to ``/usr/bin/python``, will use that interpreter if present.
-;interpreter_python=auto
+interpreter_python=auto_silent
 
 # (boolean) If 'false', invalid attributes for a task will result in warnings instead of errors
 ;invalid_task_attribute_failed=True
