--- a/roles/dnf-config/defaults/main.yml
+++ b/roles/dnf-config/defaults/main.yml
@@ -1,24 +1,25 @@
 ---
 # defaults file for roles/dnf-repos-configuration
 
-nVidia_repo:    fedora-nvidia.repo
-nVidia_drivers: false
-
 repos:
+  - brave-browser.repo
   - fedora-rar.repo
-  - google-chrome.repo
-  - rpmfusion-free.repo
-  - rpmfusion-free-updates.repo
+  - fedora-steam.repo
   - rpmfusion-free-updates-testing.repo
-  - rpmfusion-nonfree.repo
-  - rpmfusion-nonfree-nvidia-driver.repo
+  - rpmfusion-free-updates.repo
+  - rpmfusion-free.repo
   - rpmfusion-nonfree-steam.repo
-  - rpmfusion-nonfree-updates.repo
   - rpmfusion-nonfree-updates-testing.repo
+  - rpmfusion-nonfree-updates.repo
+  - rpmfusion-nonfree.repo
+  - slack.repo
   - vscode.repo
 
+repos_to_enable: []
+repos_to_disable: []
+
 repos_gpg_keys:
-  - RPM-GPG-KEY-github
+  - RPM-GPG-KEY-brave
   - RPM-GPG-KEY-microsoft
   - RPM-GPG-KEY-slaanesh
-
+  - RPM-GPG-KEY-slack
